<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/surX"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_X"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/surY"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:text="@string/coordinate_Y"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/timePlaceholder"
        android:textSize="18sp" />
</LinearLayout>
